[gd_scene load_steps=27 format=3 uid="uid://bgnupcshe1m7r"]

[ext_resource type="Script" uid="uid://bytu6rnfilo8w" path="res://src/Systems/Session/GameSession.gd" id="1_eklvp"]
[ext_resource type="PackedScene" uid="uid://cvl76duuym1wq" path="res://src/UI/Shared/MusicMenu/MusicMenu.tscn" id="2_kt6aa"]
[ext_resource type="PackedScene" uid="uid://dvdynl6eir40o" path="res://src/UI/Session/PauseMenu/PauseMenu.tscn" id="3_bvmqh"]
[ext_resource type="Script" uid="uid://b6gvunn4jaq62" path="res://src/Systems/Session/ModelManager.gd" id="3_qwk4j"]
[ext_resource type="Script" uid="uid://dsexu6le2pmrs" path="res://src/UI/Session/Topbar.gd" id="4_2kbih"]
[ext_resource type="Script" uid="uid://1vvx8hboshu7" path="res://src/Systems/Session/Billboard/BillboardManager.gd" id="4_b3l7b"]
[ext_resource type="PackedScene" uid="uid://dkehmdnuxih2r" path="res://src/Systems/Session/Map/MapView.tscn" id="4_xkg5j"]
[ext_resource type="Shader" uid="uid://c1mjns1pc1mws" path="res://src/Systems/Session/Billboard/billboard.gdshader" id="5_7yrtq"]
[ext_resource type="Script" uid="uid://cyqfdvy515q0n" path="res://src/UI/Session/ProductionMenu.gd" id="5_16755"]
[ext_resource type="Script" uid="uid://bj67he15o55hq" path="res://src/UI/Session/ProvinceOverviewPanel.gd" id="5_lfv8l"]
[ext_resource type="Script" uid="uid://bovkuvc6bllce" path="res://src/UI/Session/SearchPanel.gd" id="5_t260f"]
[ext_resource type="PackedScene" uid="uid://cnbfxjy1m6wja" path="res://src/UI/GameMenu/OptionMenu/OptionsMenu.tscn" id="6_p5mnx"]
[ext_resource type="Script" uid="uid://buax4vyqruuwq" path="res://src/UI/Session/BudgetMenu.gd" id="6_vninv"]
[ext_resource type="Script" uid="uid://d4mn2serpowg0" path="res://src/UI/Session/TechnologyMenu.gd" id="7_r712c"]
[ext_resource type="PackedScene" uid="uid://d3g6wbvwflmyk" path="res://src/UI/GameMenu/SaveLoadMenu/SaveLoadMenu.tscn" id="8_4g7ko"]
[ext_resource type="Script" uid="uid://bmp4hdgiud28a" path="res://src/UI/Session/PoliticsMenu.gd" id="8_ppdek"]
[ext_resource type="Script" uid="uid://bdy8coelqpven" path="res://src/UI/Session/PopulationMenu.gd" id="10_laee7"]
[ext_resource type="Script" uid="uid://bessw6400bsc7" path="res://src/UI/Session/TradeMenu.gd" id="10_mv1r6"]
[ext_resource type="Script" uid="uid://clfk8eo1fsls" path="res://src/UI/Session/DiplomacyMenu.gd" id="11_fu7ys"]
[ext_resource type="Script" uid="uid://b1phfivef88rl" path="res://src/UI/Session/MilitaryMenu.gd" id="12_6h6nc"]
[ext_resource type="Script" uid="uid://c13log8xxe0ka" path="res://src/UI/Session/Ledger.gd" id="15_vhb1p"]
[ext_resource type="Script" uid="uid://dwl7hkcjjjv0y" path="res://src/UI/Shared/Tooltip.gd" id="20_3306e"]
[ext_resource type="Script" uid="uid://brj7thir5rehc" path="res://src/UI/Session/Menubar.gd" id="20_s1i71"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ghmi8"]
render_priority = 0
shader = ExtResource("5_7yrtq")
shader_parameter/billboards = null
shader_parameter/numframes = PackedInt32Array(0, 0, 0, 0)
shader_parameter/sizes = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="QuadMesh" id="QuadMesh_fm6ks"]
material = SubResource("ShaderMaterial_ghmi8")

[sub_resource type="MultiMesh" id="MultiMesh_c56es"]
transform_format = 1
use_custom_data = true
mesh = SubResource("QuadMesh_fm6ks")

[node name="GameSession" type="Node" node_paths=PackedStringArray("_map_view", "_model_manager", "_game_session_menu")]
editor_description = "SS-102, UI-546"
script = ExtResource("1_eklvp")
_map_view = NodePath("MapView")
_model_manager = NodePath("ModelManager")
_game_session_menu = NodePath("UICanvasLayer/UI/GameSessionMenu")

[node name="MapView" parent="." instance=ExtResource("4_xkg5j")]

[node name="ModelManager" type="Node3D" parent="." node_paths=PackedStringArray("_map_view")]
script = ExtResource("3_qwk4j")
_map_view = NodePath("../MapView")

[node name="BillboardManager" type="MultiMeshInstance3D" parent="." node_paths=PackedStringArray("_map_view")]
sorting_offset = 10.0
cast_shadow = 0
multimesh = SubResource("MultiMesh_c56es")
script = ExtResource("4_b3l7b")
_map_view = NodePath("../MapView")

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UICanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ProvinceOverviewPanel" type="GUINode" parent="UICanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
mouse_force_pass_scroll_events = false
script = ExtResource("5_lfv8l")

[node name="Topbar" type="GUINode" parent="UICanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
mouse_force_pass_scroll_events = false
script = ExtResource("4_2kbih")

[node name="ProductionMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("5_16755")

[node name="BudgetMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("6_vninv")

[node name="TechnologyMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("7_r712c")

[node name="PoliticsMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("8_ppdek")

[node name="PopulationMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("10_laee7")

[node name="TradeMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("10_mv1r6")

[node name="DiplomacyMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("11_fu7ys")

[node name="MilitaryMenu" type="GUINode" parent="UICanvasLayer/UI/Topbar"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("12_6h6nc")

[node name="Menubar" type="GUINode" parent="UICanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("20_s1i71")

[node name="Ledger" type="GUINode" parent="UICanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("15_vhb1p")

[node name="SearchPanel" type="GUINode" parent="UICanvasLayer/UI" node_paths=PackedStringArray("_map_view")]
layout_mode = 1
anchors_preset = 15
script = ExtResource("5_t260f")
_map_view = NodePath("../../../MapView")

[node name="GameSessionMenu" parent="UICanvasLayer/UI" instance=ExtResource("3_bvmqh")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -165.0
offset_right = 159.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenu" parent="UICanvasLayer/UI" instance=ExtResource("6_p5mnx")]
visible = false
layout_mode = 1
mouse_force_pass_scroll_events = false

[node name="SaveLoadMenu" parent="UICanvasLayer/UI" instance=ExtResource("8_4g7ko")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0

[node name="MusicPlayer" parent="UICanvasLayer/UI" instance=ExtResource("2_kt6aa")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_right = 0.0
grow_horizontal = 0

[node name="Tooltip" type="GUINode" parent="UICanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
script = ExtResource("20_3306e")

[connection signal="detailed_view_changed" from="MapView" to="ModelManager" method="set_visible"]
[connection signal="detailed_view_changed" from="MapView" to="BillboardManager" method="detailed_map"]
[connection signal="map_view_camera_changed" from="MapView" to="UICanvasLayer/UI/Menubar" method="_on_map_view_camera_changed"]
[connection signal="parchment_view_changed" from="MapView" to="BillboardManager" method="parchment_view"]
[connection signal="province_clicked" from="MapView" to="." method="_on_map_view_province_clicked"]
[connection signal="province_hovered" from="MapView" to="." method="_on_map_view_province_hovered"]
[connection signal="province_right_clicked" from="MapView" to="." method="_on_map_view_province_right_clicked"]
[connection signal="province_unhovered" from="MapView" to="." method="_on_map_view_province_unhovered"]
[connection signal="ready" from="MapView" to="." method="_on_map_view_ready"]
[connection signal="game_session_menu_button_pressed" from="UICanvasLayer/UI/Menubar" to="." method="_on_game_session_menu_button_pressed"]
[connection signal="ledger_button_pressed" from="UICanvasLayer/UI/Menubar" to="UICanvasLayer/UI/Ledger" method="toggle_visibility"]
[connection signal="minimap_clicked" from="UICanvasLayer/UI/Menubar" to="MapView" method="_on_minimap_clicked"]
[connection signal="search_button_pressed" from="UICanvasLayer/UI/Menubar" to="UICanvasLayer/UI/SearchPanel" method="toggle_visibility"]
[connection signal="zoom_in_button_pressed" from="UICanvasLayer/UI/Menubar" to="MapView" method="zoom_in"]
[connection signal="zoom_out_button_pressed" from="UICanvasLayer/UI/Menubar" to="MapView" method="zoom_out"]
[connection signal="load_button_pressed" from="UICanvasLayer/UI/GameSessionMenu" to="UICanvasLayer/UI/SaveLoadMenu" method="show_for_load"]
[connection signal="options_button_pressed" from="UICanvasLayer/UI/GameSessionMenu" to="UICanvasLayer/UI/OptionsMenu" method="show"]
[connection signal="save_button_pressed" from="UICanvasLayer/UI/GameSessionMenu" to="UICanvasLayer/UI/SaveLoadMenu" method="show_for_save"]
[connection signal="back_button_pressed" from="UICanvasLayer/UI/OptionsMenu" to="MapView" method="enable_processing"]
[connection signal="back_button_pressed" from="UICanvasLayer/UI/OptionsMenu" to="UICanvasLayer/UI/OptionsMenu" method="hide"]
